Fix overflowing text

--- a/internal/assets/static/main.css
+++ b/internal/assets/static/main.css
@@ -263,6 +263,7 @@ html {
 a {
     text-decoration: none;
     color: inherit;
+    overflow-wrap: break-word;
 }
 
 ul {
